--- a/kartyak.css
+++ b/kartyak.css
@@ -31,21 +31,21 @@ h2::after{
 
 .kartyak {
     display: flex;
-    flex-wrap: wrap;
     gap: 20px;
     margin-top: 20px;
 }
-
+.row{  
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+}
 .card {
-    width: 30%;
-    border: 1px solid #ddd;
+    width: 80%;
     border-radius: 5px;
     overflow: hidden;
-    text-align: center;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 10px;
 }
-
 .card h1 {
     font-size: 1.2em;
     margin: 10px 0;
