--- a/kartyak.css
+++ b/kartyak.css
@@ -12,7 +12,7 @@
 
 .bal {
     width: 70%;
-    margin-right: 2%;
+    margin-right: 3.5%;
 }
 h2{
     border-bottom: 1px solid gray;
@@ -22,10 +22,10 @@ h2{
 
 h2::after{
     content: '';
-    border-bottom: 4px solid orangered;
+    border-bottom: 3px solid orangered;
     display: block;
     margin-bottom: -1px;
-    max-width: 5%;
+    max-width: 7%;
     padding-top: 0.5%
 }
 
@@ -41,22 +41,30 @@ h2::after{
     grid-gap: 1rem;
 }
 .card {
-    width: 80%;
+    width: 100%;
     border-radius: 5px;
     overflow: hidden;
     padding: 10px;
 }
+.card img{
+    height: 100%;
+}
 .card h1 {
     font-size: 1.2em;
+    font-weight:400;
     margin: 10px 0;
 }
 
 .card .price {
     color: red;
-    font-weight: bold;
+    margin-top: -5%;
 }
 .select{
-    color: gray;
+    margin-top: 3.5%;
+    
 }
-
-
+#default-sorting{
+    color: gray;
+    border-style:groove;
+    padding: 3%;
+}
