--- a/main.css
+++ b/main.css
@@ -152,8 +152,29 @@ footer{
     transform: rotate(180deg);
 }
 
+/*Dropdown animációk*/
 
-@media only screen and (max-width: 1000px) {
+.dropdownMain{
+    display: none;
+    position: absolute;
+    min-width: 100px;
+    height: fit-content;
+}
+
+.dropdown:hover .dropdownMain{
+
+    display: flex;
+    flex-direction: column;
+    
+
+}
+
+
+
+
+
+
+/*@media only screen and (max-width: 1000px) {
     .felsoLec {
         flex-direction: column;
         align-items: center;
@@ -172,7 +193,6 @@ footer{
     
     }
 
-    /*Dropdown animacio itt lesz*/
 
   }
 
@@ -192,6 +212,9 @@ footer{
 
     
     }
+
+
+
 }
 
 
