--- a/main.css
+++ b/main.css
@@ -49,9 +49,9 @@ body{
 }
 
 .menuLinks{
-    margin-left: 19px;
-    padding-left: 3px;
-    padding-right: 3px;
+    margin-left: 2.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     font-size: larger;
     font-weight: 500;
     font-variant:small-caps; 
@@ -66,7 +66,6 @@ body{
 
 .menuNyil{
     display: inline;
-    transition: transform 0.5s ease;
 }
 
 /*Lécek*/
@@ -148,33 +147,54 @@ footer{
 
 }
 
-.menuNyil:hover{
-    transform: rotate(180deg);
-}
 
 /*Dropdown animációk*/
 
+.dropdown{
+    position: relative;
+    margin-top: 0.7em;
+    
+}
+
 .dropdownMain{
-    display: none;
     position: absolute;
-    min-width: 100px;
+    min-width: 9em;
     height: fit-content;
+    opacity: 0;
+    transition: opacity 0.2s ease visibility 0.2s ease;
+    visibility: hidden;
+    transition-delay: 0;
+    background-color: rgb(0, 5, 46);
+    border-radius: 0.5em;
+    z-index: 1;
 }
 
 .dropdown:hover .dropdownMain{
 
     display: flex;
     flex-direction: column;
-    
+    margin-left: 2.5em;
+    opacity: 100;
+    visibility: visible;
+    transition-delay: 0.5s;
+}
 
+.dropdownLinks{
+    border-radius: 0.5em;
+    text-decoration: none;
+    color: white;
+    transition: background-color 0.2s ease-out ;
 }
 
 
 
+.dropdownLinks:hover{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
 
 
-
-/*@media only screen and (max-width: 1000px) {
+/*@media only screen and (max-width: 1250px) {
     .felsoLec {
         flex-direction: column;
         align-items: center;
@@ -196,7 +216,7 @@ footer{
 
   }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 700px) {
     .foMenu{
         display: none;
     }
