--- a/main.css
+++ b/main.css
@@ -2,10 +2,25 @@
 
 body{
     margin: 2px;
-    letter-spacing: 1px;
-    font-family: "Oswald", sans-serif;
+    letter-spacing: 0px;
+    /*font-family: "Oswald", sans-serif;*/
+    font-family: "Poppins", sans-serif;
 }
 
+.main{
+    display: flex;
+    flex-direction: row;
+
+}
+
+.jobb{
+    margin-top: 0.2vw;
+    margin-right: 15%;
+}
+
+.bal{
+    margin-left: 15%;
+}
 
 .foMenu{
     
@@ -53,7 +68,7 @@ body{
     padding-left: 0.5em;
     padding-right: 0.5em;
     font-size: larger;
-    font-weight: 500;
+    font-weight: 700;
     font-variant:small-caps; 
     color: black;
     margin-top:  auto;
@@ -180,6 +195,8 @@ footer{
 }
 
 .dropdownLinks{
+    padding: 0.2em;
+    margin: 0.3em;
     border-radius: 0.5em;
     text-decoration: none;
     color: white;
@@ -194,7 +211,390 @@ footer{
 }
 
 
-/*@media only screen and (max-width: 1250px) {
+
+/*Main oldal*/
+/*Kartyak*/
+
+
+.container {
+    display: flex;
+    margin: 20px 15%;
+}
+.alatta{
+    display: flex;
+    justify-content: space-between;
+    color: gray;
+
+}
+
+.bal {
+    width: 70%;
+}
+h2{
+    border-bottom: 1px solid gray;
+    font-size: 1.5vw;
+    color: gray;
+}
+
+h2::after{
+    content: '';
+    border-bottom: 4px solid orangered;
+    display: block;
+    margin-bottom: -1px;
+    max-width: 5%;
+    padding-top: 0.5%
+}
+
+.kartyak {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+.row{  
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+}
+.card {
+    width: 80%;
+    border-radius: 5px;
+    overflow: hidden;
+    padding: 10px;
+}
+.card h1 {
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+.card .price {
+    color: red;
+    font-weight: bold;
+}
+.select{
+    color: gray;
+}
+
+
+
+/*Szűrők jobboldal*/
+
+
+.szuroDiv{
+    width: 150%;
+}
+
+h2{
+    border-bottom: 3px solid gray;
+    font-size: 2vw;
+    font-weight: lighter;
+    margin-bottom: 3%;
+}
+
+h2::after{
+    content: '';
+    border-bottom: 3px solid orangered;
+    display: block;
+    margin-bottom: -3px;
+    max-width: 16%;
+    padding-top: 0.5%
+}
+
+.csuszkaId{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(88, 22, 45);
+    border-radius: 50px;
+    -webkit-appearance: none;
+}
+
+.csuszkaId::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 2vw;
+    width: 2.5vw;
+    border-radius: 80px;
+    background: orangered;
+    cursor: pointer;
+    margin-top: -10px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+  }
+
+  .arEsGombDiv{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    height: 1.8vw;
+  }
+
+  #FilterGombDiv{
+    height: 2vw;
+    margin-top: 0.5vw;
+    margin-bottom: auto;
+    border: 0px solid;
+    border-radius: 4px;
+    font-weight: bold;
+    padding-left: 1.2vw;
+    padding-right: 1.2vw;
+    font-size: 1vw;
+  }
+
+  #PriceDiv{
+    display: flex;
+    font-size: 1vw;
+    font-weight: lighter;
+    color: rgb(184, 184, 184);
+  }
+
+  #szuzoKategoriakOl{
+    padding-left: 5%;
+    list-style-type: square;
+  }
+
+  #szuzoKategoriakOl > li{
+    color: rgb(138, 138, 138);
+    margin-bottom: 4%;
+    padding-bottom: 3%;
+    border-bottom: 1px dashed rgb(184, 184, 184);
+    font-size: 1.2vw;
+  }
+
+  .SzuroAnchor{
+    text-decoration: none;
+    color: rgb(138, 138, 138);
+  }
+
+  #TopKategoriakUl{
+    padding-left: 5%;
+    list-style-type: square;
+  }
+
+  #TopKategoriakUl > li{
+    color: black;
+    font-weight: bold;
+    margin-bottom: 4%;
+    font-size: 1.4vw;
+  }
+
+  #TopKategoriakUl > p{
+    border-bottom: 1px dashed rgb(184, 184, 184);
+    padding-bottom: 3%;
+    font-size: 1vw;
+  }
+
+  .TopAnchor{
+    text-decoration: none;
+    color: black;
+  }
+
+  .TopKep{
+    width: 6vh;
+    height: 6vh;
+    display: inline;
+    float: right;
+  }
+
+
+  :root {
+    --ColorPrimaryDk: orangered;
+      --ColorPrimaryLt: orangered;
+  }
+  
+  
+  .range-slider {
+      --range-slider-common-height: 16px;
+      --range-slider-handle-width: 24px;
+      --range-slider-handle-height: 24px;
+  
+      position: relative;
+      display: flex;
+      align-items: center;
+      width: 99%;
+      height: 100%;
+      margin-top: 1.5vw;
+      margin-bottom: 1.2vw;
+  }
+  
+  .range-slider > div {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      left: 0px;
+      right: 0px;
+      height: var(--range-slider-common-height);
+  }
+  
+  .range-slider > div > .range-slider-val-left, 
+  .range-slider > div > .range-slider-val-right, 
+  .range-slider > div > .range-slider-val-range {
+      height: 0.4vw;
+  }
+  
+  .range-slider > div > .range-slider-val-left {
+    position: absolute;
+    left: 0;
+    border-radius: 10px;
+    background-color: #58122d;
+    margin: 0px;
+  }
+  
+  .range-slider > div > .range-slider-val-right {
+    position: absolute;
+    right: 0;
+    margin: 0px;
+    border-radius: 10px;
+    background-color: #58122d;
+  }
+  
+  .range-slider > div > .range-slider-val-range {
+      position: absolute;
+      left: 0;
+      top: 4px;
+      height: 8px;
+      border-radius: 14px;
+      background-color: var(--ColorPrimaryLt);
+  }
+  
+  .range-slider > div > .range-slider-handle {
+      z-index: 1;
+      position: absolute;
+      top: 0px;
+      margin-left: -11px;
+      width: 20px;
+      height: 15px;
+      border-radius: 100px;
+      background-color: orangered;
+      text-align: left;
+    
+      outline: none;
+      cursor: pointer;
+  }
+  
+  div.range-slider > input[type="range"]::-ms-thumb {
+    width: var(--range-slider-handle-width);
+      height: var(--range-slider-handle-height);
+      border: 0 none;
+      border-radius: 0px;
+      background: red;
+      
+      pointer-events: all;
+    
+  }
+  
+  div.range-slider > input[type="range"]::-moz-range-thumb {
+    width: var(--range-slider-handle-width);
+      height: var(--range-slider-handle-height);
+      border: 0 none;
+      border-radius: 0px;
+      background: red;
+      
+      pointer-events: all;
+  }
+  
+  div.range-slider > input[type="range"]::-webkit-slider-thumb {
+    width: var(--range-slider-handle-width);
+      height: var(--range-slider-handle-height);
+      border: 0 none;
+      border-radius: 0px;
+      background: red;
+      
+      pointer-events: all;
+    -webkit-appearance: none;
+  }
+  
+  div.range-slider > input[type="range"]::-ms-fill-lower {
+    background: transparent;
+    border: 0 none;
+  }
+  
+  div.range-slider > input[type="range"]::-ms-fill-upper {
+    background: transparent;
+    border: 0 none;
+  }
+  
+  .range-slider > input[type="range"] {
+      z-index: 1;
+      position: absolute;
+    width: 100%;
+    height: var(--range-slider-common-height);
+    
+      opacity: 0;
+      filter: alpha(opacity=0);
+      cursor: pointer;
+      pointer-events: none;
+    -webkit-appearance: none;
+  }
+  
+  div.range-slider > input[type="range"]::-ms-track {
+    background: transparent;
+      color: transparent;
+      
+      -webkit-appearance: none;
+  }
+  
+  div.range-slider > input[type="range"]::-moz-range-track {
+    background: transparent;
+      color: transparent;
+      
+      -moz-appearance: none;
+  }
+  
+  div.range-slider > input[type="range"]:focus::-webkit-slider-runnable-track {
+    background: transparent;
+    border: transparent;
+  }
+  
+  div.range-slider > input[type="range"]:focus {
+    outline: none;
+  }
+  
+  div.range-slider > input[type="range"]::-ms-tooltip {
+    display: none;
+  }
+  
+  .range-slider > div > .range-slider-tooltip {
+      z-index: 2;
+    position: absolute;
+    top: -42px;
+      margin-left: -12px;
+      width: 28px;
+      height: 28px;
+      border-radius: 28px;
+    background-color: var(--ColorPrimaryLt);
+    color: #fff;
+    text-align: center;
+      
+      opacity: 0;
+  }
+  
+  .range-slider > div > .range-slider-tooltip:after {
+      content: "";
+  
+      position: absolute;
+    left: 0;
+    top: 19px;
+    border-left: 14px solid transparent;
+    border-right: 14px solid transparent;
+    border-top-width: 16px;
+    border-top-style: solid;
+      border-top-color: var(--ColorPrimaryLt);
+      border-radius: 16px;
+  }
+  
+  .range-slider > div > .range-slider-tooltip > span {
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 28px;
+  }
+  
+  .range-slider:hover > div > .range-slider-tooltip {
+    opacity: 1;
+  }
+  
+
+
+  /*Reszponzivitás*/
+
+
+  /*@media only screen and (max-width: 1250px) {
     .felsoLec {
         flex-direction: column;
         align-items: center;
@@ -235,12 +635,4 @@ footer{
 
 
 
-}
-
-
-
-  /*Main oldal*/
-
-.main{
-/*    height: 600px;*/
 }
