--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ body{
     text-decoration: none;
     border-radius: 5px;
     transition: 150ms ease-in;
+    white-space: nowrap;
 
 }
 
@@ -595,7 +596,7 @@ h2::after{
   /*Reszponzivitás*/
 
 
-  /*@media only screen and (max-width: 1250px) {
+  @media only screen and (max-width: 1280px) {
     .felsoLec {
         flex-direction: column;
         align-items: center;
@@ -617,7 +618,7 @@ h2::after{
 
   }
 
-@media only screen and (max-width: 700px) {
+/*@media only screen and (max-width: 700px) {
     .foMenu{
         display: none;
     }
