--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body{
     letter-spacing: 0px;
     /*font-family: "Oswald", sans-serif;*/
     font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
 }
 
 .main{
@@ -111,25 +112,47 @@ body{
 footer{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: rgb(0, 5, 46);
     color: white;
     font-weight: 100;
 
 }
 
-.footDivTeto{
-    font-size: large;
-    font-weight: 300;
+.visszaBTN{
+  width: 3em;
+  height: 3em;
+  font-size: larger;
+  background-color:rgb(0, 5, 46) ;
+  color: white;
+  border: 2px solid white ;
+  border-radius: 0.5em;
+  align-self: center;
+  transition: 0.2s ease-out;
+
 }
 
+.visszaBTN:hover{
+  background-color: rgb(2, 13, 97);
+}
 
 .footDivBal, .footDivKoz, .footDivJobb{
-    width: 25%;
+    width: 20%;
     text-align: justify;
+    color: rgb(216, 216, 216);
 
 }
 
+.footDivTeto{
+  font-size: large;
+  font-weight: 500;
+  color: white;
+}
+
+
+.footDivKoz{
+  margin-left: 3em;
+}
 .footDivBal{
     margin-left: 15%;
 }
