--- a/szuroterv.css
+++ b/szuroterv.css
@@ -95,6 +95,15 @@
     float: right;
   }
 
+  .AkcioS{
+    text-decoration: line-through;
+  }
+
+  .Akciozott{
+    text-decoration: none;
+    background-color: rgb(239, 255, 183);
+    margin-left: 2%;
+  }
 
   :root {
     --ColorPrimaryDk: orangered;
