--- a/main.css
+++ b/main.css
@@ -1,11 +1,15 @@
  /*Menü elemei*/
 
+html{
+  scroll-behavior: smooth;
+
+}
+
 body{
     margin: 2px;
     letter-spacing: 0px;
     /*font-family: "Oswald", sans-serif;*/
     font-family: "Poppins", sans-serif;
-    scroll-behavior: smooth;
 }
 
 .main{
