--- a/main.css
+++ b/main.css
@@ -21,11 +21,14 @@ body{
 .jobb{
     margin-top: 0.2vw;
     margin-right: 15%;
+    width: 35%;
 }
 
 .bal{
     margin-left: 15%;
     margin-right: 1vw;
+    width: 65%;
+    margin-right: 3.5%;
 }
 
 .foMenu{
@@ -256,10 +259,7 @@ footer{
 
 }
 
-.bal {
-  width: 70%;
-  margin-right: 3.5%;
-}
+
 h2{
   border-bottom: 1px solid gray;
   font-size: 1.5vw;
@@ -281,16 +281,12 @@ h2::after{
   margin-top: 20px;
 }
 .row{  
-  display: grid;
-  grid-auto-rows: auto;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .card {
-  width: 100%;
   border-radius: 5px;
-  overflow: hidden;
-  padding: 10px;
 }
 .card h1 {
   font-size: 1.2em;
@@ -299,9 +295,10 @@ h2::after{
 }
 
 .card .price {
-  color: red;
+  color: rgb(235, 73, 73);
   margin-top: -5%;
 }
+
 .select{
   margin-top: 3.5%;
   
