--- a/main.css
+++ b/main.css
@@ -186,8 +186,7 @@ footer{
 /*Animációk*/
 
 .menuLinks:hover{
-    background-color: black;
-    color: white;
+    font-size: 125%;
 
 }
 
@@ -195,7 +194,6 @@ footer{
 /*Dropdown animációk*/
 
 .dropdown{
-    position: relative;
     margin-top: 0.7em;
     
 }
@@ -208,8 +206,7 @@ footer{
     transition: opacity 0.2s ease visibility 0.2s ease;
     visibility: hidden;
     transition-delay: 0;
-    background-color: rgb(0, 5, 46);
-    border-radius: 0.5em;
+    background-color: white;
     z-index: 1;
 }
 
@@ -224,19 +221,21 @@ footer{
 }
 
 .dropdownLinks{
+    font-variant: small-caps;
     padding: 0.2em;
     margin: 0.3em;
-    border-radius: 0.5em;
     text-decoration: none;
-    color: white;
+    color:black;
     transition: background-color 0.2s ease-out ;
+    border-bottom: 1px solid black;
+
 }
 
 
 
 .dropdownLinks:hover{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+  color: #ff6257;
+
 }
 
 
