--- a/main.css
+++ b/main.css
@@ -127,15 +127,16 @@ footer{
 }
 
 .visszaBTN{
-  width: 3em;
-  height: 3em;
-  font-size: larger;
+  width: 2em;
+  height: 2em;
+  font-size: large;
   background-color:rgb(0, 5, 46) ;
   color: white;
   border: 2px solid white ;
-  border-radius: 0.5em;
+  border-radius: 0.1em;
   align-self: center;
   transition: 0.2s ease-out;
+  padding-bottom: 0.4em;
 
 }
 
