--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ html{
 
 body{
     margin: 2px;
-    letter-spacing: 0px;
+    letter-spacing: 0.02em;
     /*font-family: "Oswald", sans-serif;*/
     font-family: "Poppins", sans-serif;
 }
@@ -171,7 +171,7 @@ footer{
 
 .contactKepek{
     height: 1.5em;
-}
+    opacity: 0.7;}
 
 .contact{
     display: flex;
