Sticky rárakása a headerre, meg próbálkozás a széleivel

--- a/main.css
+++ b/main.css
@@ -103,6 +103,9 @@ body{
     flex-direction: row;
     max-height: 70px;
     justify-content: space-between;
+    position: sticky;
+    top: 0%;
+    background-color: white;
 }
 
 
