--- a/main.css
+++ b/main.css
@@ -155,6 +155,10 @@ footer{
   font-size: large;
   font-weight: 500;
   color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
 }
 
 
@@ -174,9 +178,12 @@ footer{
     height: 1.5em;
     opacity: 0.7;}
 
-.contact{
+.footDivJobb > .contact{
+  margin-left: 1.6em;
     display: flex;
     flex-direction: row;
+    align-items: center;
+
 }
 
 .route>p{
