--- a/main.css
+++ b/main.css
@@ -103,11 +103,15 @@ body{
     flex-direction: row;
     max-height: 70px;
     justify-content: space-between;
-    position: sticky;
-    top: 0%;
-    background-color: white;
 }
 
+.stickyteto{
+  position: sticky;
+  top: 0%;
+  background-color: white;
+  box-shadow: rgb(199, 199, 199) 0px 2px 10px;
+  padding-bottom: 2%
+}
 
 .route{
     display: flex;
@@ -116,7 +120,7 @@ body{
     width: 100%;
     background-color: rgb(235, 73, 73);
     height: 90px;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 footer{
