--- a/main.css
+++ b/main.css
@@ -183,7 +183,9 @@ footer{
 
 .contactKepek{
     height: 1.5em;
-    opacity: 0.7;}
+    opacity: 0.7;
+    vertical-align: middle;
+  }
 
 .footDivJobb > .contact{
   margin-left: 1.6em;
