--- a/main.css
+++ b/main.css
@@ -22,13 +22,12 @@ body{
 .jobb{
     margin-top: 0.2vw;
     margin-right: 15%;
-    width: 35%;
+    width: 30%;
 }
 
 .bal{
     margin-left: 15%;
-    margin-right: 1vw;
-    width: 65%;
+    width: 80%;
     margin-right: 3.5%;
 }
 
@@ -271,14 +270,13 @@ footer{
   display: flex;
   margin: 20px 15%;
 }
-
-
-.alatta {
+.fent{
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  color: gray;
+  margin-top: -0.5%;
+  align-items: baseline;
 }
-
 h2 {
   border-bottom: 1px solid gray;
   font-size: 1.5vw;
@@ -294,100 +292,76 @@ h2::after {
   padding-top: 0.5%;
 }
 
-.kartyak {
-  gap: 5px;
-  width: 100%;
-  margin-top: 20px;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.card {
-  background-color: rgb(248, 248, 248);
-  display: flex;
-  width: 110%;
-  flex-direction: column; 
-  overflow: hidden;
-  position: relative;
-}
-.card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; 
-}
-
-.alja {
-  background-color: rgb(243, 243, 243);
-  padding: 5px;
-  flex-grow: 1; 
-
-}
-
-.card h1 {
-  font-size: 1.2em;
-  font-weight: 400;
-  margin: 10px 0;
-}
-
-.card .price {
-  color: rgb(235, 73, 73);
-}
-
-.select {
-  margin-top: 3.5%;
-}
 
 #default-sorting {
   color: gray;
   border-style: groove;
-  padding: 3%;
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
-
-#athuzott {
+.product-container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+#result {
+  font-size: 18px;
   color: gray;
+
+}
+.select {
+  margin-bottom: 5%;
 }
 
-/* asztal */
-@media only screen and (min-width: 1024px) {
+.row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 20px; 
+}
+
+.card {
+  background: rgb(251, 251, 251);
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.card h1 {
+  font-size: 18px;
+  margin: 10px 0;
+  color: #333;
+  margin-left: 10%;
+}
+
+.card .price {
+  font-size: 16px;
+  font-weight: 600;
+  color: #e74c3c;
+  margin-top: -2%;
+  margin-left: 10%;
+}
+
+.card .price s {
+  color: #999;
+  margin-right: 5px;
+}
+
+
+
+@media (max-width: 768px) {
   .row {
-    gap: 30px; 
-  }
-
-  .kartyak {
-    flex: 1 1 calc(33.333% - 20px); 
-  }
-
-  #LeatherJ{
-    font-size: 100%;
+      grid-template-columns: repeat(2, 1fr);
   }
 }
 
-/* mobil nezet*/
-@media only screen and (max-width: 1023px) {
+/* Mobil nézet */
+@media (max-width: 480px) {
   .row {
-    gap: 20px; 
-  }
-
-  .kartyak {
-    flex: 1 1 calc(50% - 20px); 
+      grid-template-columns: 1fr;
   }
 }
-
-
-@media only screen and (max-width: 600px) {
-  .row {
-    gap: 15px; 
-  }
-
-  .kartyak {
-    flex: 1 1 100%; 
-  }
-}
-
 
 
 /*Szűrők jobboldal
