--- a/main.css
+++ b/main.css
@@ -112,7 +112,7 @@ body{
   top: 0%;
   background-color: white;
   box-shadow: rgb(199, 199, 199) 0px 2px 10px;
-  padding-bottom: 2%
+  padding-bottom: 1%
 }
 
 .route{
@@ -126,10 +126,11 @@ body{
 }
 
 footer{
+  padding-top: 2vh;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: rgb(0, 5, 46);
+    background-color: rgb(16, 14, 36);
     color: white;
     font-weight: 100;
 
@@ -139,7 +140,7 @@ footer{
   width: 2em;
   height: 2em;
   font-size: large;
-  background-color:rgb(0, 5, 46) ;
+  background-color:rgb(16, 14, 36);
   color: white;
   border: 2px solid white ;
   border-radius: 0.1em;
@@ -309,14 +310,14 @@ h2::after {
 .card {
   background-color: rgb(248, 248, 248);
   display: flex;
-  width: 110%;
+  width: 25vh;
   flex-direction: column; 
   overflow: hidden;
   position: relative;
 }
 .card img {
-  width: 100%;
-  height: 100%;
+  width: 25vh;
+  height: 25vh;
   object-fit: cover; 
 }
 
@@ -387,8 +388,6 @@ h2::after {
     flex: 1 1 100%; 
   }
 }
-
-
 
 /*Szűrők jobboldal
 
