--- a/main.css
+++ b/main.css
@@ -22,12 +22,13 @@ body{
 .jobb{
     margin-top: 0.2vw;
     margin-right: 15%;
-    width: 30%;
+    width: 35%;
 }
 
 .bal{
     margin-left: 15%;
-    width: 80%;
+    margin-right: 1vw;
+    width: 65%;
     margin-right: 3.5%;
 }
 
@@ -125,7 +126,7 @@ body{
 }
 
 footer{
-  padding-top: 2vh;
+  padding-top: 2em;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -139,7 +140,7 @@ footer{
   width: 2em;
   height: 2em;
   font-size: large;
-  background-color:rgb(16, 14, 36);
+  background-color:rgb(0, 5, 46) ;
   color: white;
   border: 2px solid white ;
   border-radius: 0.1em;
@@ -271,13 +272,14 @@ footer{
   display: flex;
   margin: 20px 15%;
 }
-.fent{
+
+
+.alatta {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  margin-top: -0.5%;
-  align-items: baseline;
+  color: gray;
 }
+
 h2 {
   border-bottom: 1px solid gray;
   font-size: 1.5vw;
@@ -293,77 +295,99 @@ h2::after {
   padding-top: 0.5%;
 }
 
+.kartyak {
+  gap: 5px;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card {
+  background-color: rgb(248, 248, 248);
+  display: flex;
+  width: 25vh;
+  flex-direction: column; 
+  overflow: hidden;
+  position: relative;
+}
+.card img {
+  width: 25vh;
+  height: 25vh;
+  object-fit: cover; 
+}
+
+.alja {
+  background-color: rgb(243, 243, 243);
+  padding: 5px;
+  flex-grow: 1; 
+
+}
+
+.card h1 {
+  font-size: 1.2em;
+  font-weight: 400;
+  margin: 10px 0;
+}
+
+.card .price {
+  color: rgb(235, 73, 73);
+}
+
+.select {
+  margin-top: 3.5%;
+}
 
 #default-sorting {
   color: gray;
   border-style: groove;
-  padding-top: 3%;
-  padding-bottom: 3%;
+  padding: 3%;
 }
-.product-container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-#result {
-  font-size: 18px;
+
+#athuzott {
   color: gray;
-
-}
-.select {
-  margin-bottom: 5%;
 }
 
-.row {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); 
-  gap: 20px; 
-}
-
-.card {
-  background: rgb(251, 251, 251);
-}
-
-.card img {
-  width: 25vh;
-  height: 25vh;
-  margin-bottom: 10px;
-}
-
-.card h1 {
-  font-size: 18px;
-  margin: 10px 0;
-  color: #333;
-  margin-left: 10%;
-}
-
-.card .price {
-  font-size: 16px;
-  font-weight: 600;
-  color: #e74c3c;
-  margin-top: -2%;
-  margin-left: 10%;
-}
-
-.card .price s {
-  color: #999;
-  margin-right: 5px;
-}
-
-
-
-@media (max-width: 768px) {
+/* asztal */
+@media only screen and (min-width: 1024px) {
   .row {
-      grid-template-columns: repeat(2, 1fr);
+    gap: 30px; 
+  }
+
+  .kartyak {
+    flex: 1 1 calc(33.333% - 20px); 
+  }
+
+  #LeatherJ{
+    font-size: 100%;
   }
 }
 
-/* Mobil nézet */
-@media (max-width: 480px) {
+/* mobil nezet*/
+@media only screen and (max-width: 1023px) {
   .row {
-      grid-template-columns: 1fr;
+    gap: 20px; 
+  }
+
+  .kartyak {
+    flex: 1 1 calc(50% - 20px); 
   }
 }
 
+
+@media only screen and (max-width: 600px) {
+  .row {
+    gap: 15px; 
+  }
+
+  .kartyak {
+    flex: 1 1 100%; 
+  }
+}
 
 /*Szűrők jobboldal
 
