--- a/szuroterv.css
+++ b/szuroterv.css
@@ -49,25 +49,30 @@
 
   #szuzoKategoriakOl{
     padding-left: 5%;
-    list-style-type: square;
+    list-style-type: disc;
   }
 
   #szuzoKategoriakOl > li{
     color: rgb(138, 138, 138);
     margin-bottom: 4%;
     padding-bottom: 3%;
-    border-bottom: 1px dashed rgb(184, 184, 184);
+
     font-size: 1.2vw;
   }
 
   .SzuroAnchor{
     text-decoration: none;
     color: rgb(94, 94, 94);
+    
+  }
+
+  .szuroLiClass{
+    border-bottom: 1px dashed rgb(184, 184, 184);
   }
 
   #TopKategoriakUl{
     padding-left: 5%;
-    list-style-type: square;
+    list-style-type: disc;
   }
 
   #TopKategoriakUl > li{
@@ -78,7 +83,6 @@
   }
 
   #TopKategoriakUl > p{
-    border-bottom: 1px dashed rgb(184, 184, 184);
     padding-bottom: 3%;
     font-size: 1vw;
   }
