--- a/main.css
+++ b/main.css
@@ -316,7 +316,7 @@ h2::after {
   position: relative;
 }
 .card img {
-  width: 25vh;
+  width: 100%;
   height: 25vh;
   object-fit: cover; 
 }
@@ -355,7 +355,7 @@ h2::after {
 /* asztal */
 @media only screen and (min-width: 1024px) {
   .row {
-    gap: 30px; 
+    gap: 1.1vw; 
   }
 
   .kartyak {
