--- a/main.css
+++ b/main.css
@@ -158,7 +158,7 @@ footer{
 .footDivBal, .footDivKoz, .footDivJobb{
     width: 20%;
     text-align: justify;
-    color: rgb(216, 216, 216);
+    color: rgba(216, 216, 216, 0.788);
 
 }
 
@@ -181,13 +181,13 @@ footer{
 }
 
 .footDivJobb{
-    margin-right: 5%;
+    margin-right: 15%;
 
 }
 
 .contactKepek{
     height: 1.5em;
-    opacity: 0.7;
+    opacity: 0.5;
     vertical-align: middle;
   }
 
