--- a/main.css
+++ b/main.css
@@ -320,11 +320,49 @@ h2::after {
   position: relative;
   
 }
+.card-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-container:hover img {
+  opacity: 0.5;
+  filter: brightness(0.7);
+}
+
+.card-container:hover {
+  background-color: rgb(235, 73, 73);
+} 
+
+.add-to-cart {
+  position: absolute;
+  width: 45%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  border: solid;
+  border-width: 1px;
+  padding:10px 20px 10px 20px;
+  border-color: white;
+  opacity: 0;
+  cursor: pointer;
+  text-align: center;
+}
+
+.card-container:hover .add-to-cart {
+  opacity: 1;
+}
 .card img {
   width: 100%;
   height: 25vh;
   object-fit: cover; 
-  transition: .3s cubic-bezier(.6,.4,0,1),transform .15s ease;
 }
 
 .alja {
