--- a/main.css
+++ b/main.css
@@ -332,6 +332,7 @@ h2::after {
 }
 
 .card-container:hover img {
+  transition: 0.3s ease-in;
   opacity: 0.5;
   filter: brightness(0.7);
 }
@@ -361,7 +362,7 @@ h2::after {
 }
 .card img {
   width: 100%;
-  height: 25vh;
+  height: 100%;
   object-fit: cover; 
 }
 
