--- a/main.css
+++ b/main.css
@@ -360,6 +360,11 @@ h2::after {
 .card-container:hover .add-to-cart {
   opacity: 1;
 }
+.add-to-cart:hover{
+  background-color: rgb(29, 29, 29);
+  border: none;
+  color: white;
+}
 .card img {
   width: 100%;
   height: 100%;
