--- a/main.css
+++ b/main.css
@@ -141,18 +141,19 @@ footer{
   height: 2em;
   font-size: larger;
   background-color: transparent;
-  color: rgb(116, 116, 116);
-  border: 2px solid rgb(194, 194, 194) ;
+  color: rgb(170, 170, 170);
+  border: 1px solid rgb(194, 194, 194) ;
   align-self: center;
-  transition: 0.2s ease-out;
+  transition: 0.4s ease-out;
   position: fixed;
   bottom: 8vh;
   right: 4vh;
 }
 
 .visszaBTN:hover{
-  background-color: rgb(211, 211, 211);
-  color: black;
+  background-color: rgb(235, 73, 73);
+  color: white;
+  border-color: rgb(235, 73, 73);
 }
 
 .footDivBal, .footDivKoz, .footDivJobb{
