--- a/main.css
+++ b/main.css
@@ -349,6 +349,8 @@ h2::after {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  font-variant: small-caps;
+  font-weight: 600;
   border: solid;
   border-width: 1px;
   padding:10px 20px 10px 20px;
@@ -356,6 +358,7 @@ h2::after {
   opacity: 0;
   cursor: pointer;
   text-align: center;
+  transition: 0.3s ease;
 }
 
 .card-container:hover .add-to-cart {
