--- a/main.css
+++ b/main.css
@@ -332,7 +332,8 @@ h2::after {
 }
 
 .card-container:hover img {
-  transition: 0.3s ease-in;
+  transition: 0.3s ease-in-out;
+
   opacity: 0.5;
   filter: brightness(0.7);
 }
