--- a/main.css
+++ b/main.css
@@ -111,7 +111,6 @@ body{
   position: sticky;
   top: 0%;
   background-color: white;
-  box-shadow: rgb(199, 199, 199) 0px 2px 10px;
   padding-bottom: 2%
 }
 
@@ -283,6 +282,9 @@ footer{
   display: flex;
   justify-content: space-between;
   color: gray;
+  align-items: baseline;
+  margin-top: -4%;
+  margin-bottom: 2%;
 }
 
 h2 {
@@ -315,7 +317,7 @@ h2::after {
 .card {
   background-color: rgb(248, 248, 248);
   display: flex;
-  width: 25vh;
+  width: 100%;
   flex-direction: column; 
   overflow: hidden;
   position: relative;
@@ -325,7 +327,7 @@ h2::after {
   position: relative;
   overflow: hidden;
 }
-
+/*tudja faszom*/
 .card-container img {
   width: 100%;
   height: 100%;
@@ -377,7 +379,6 @@ h2::after {
 }
 
 .alja {
-  background-color: rgb(243, 243, 243);
   padding: 5px;
   flex-grow: 1; 
 
@@ -399,6 +400,7 @@ h2::after {
 
 #default-sorting {
   color: gray;
+  width: 100%;
   border-style: groove;
   padding: 3%;
 }
