--- a/main.css
+++ b/main.css
@@ -345,9 +345,13 @@ h2::after {
   background-color: rgb(235, 73, 73);
 } 
 
+.card-container {
+  position: relative; 
+}
+
 .add-to-cart {
   position: absolute;
-  width: 45%;
+  width: 70%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -356,10 +360,9 @@ h2::after {
   font-weight: 600;
   border: solid;
   border-width: 1px;
-  padding:10px 20px 10px 20px;
+  padding: 5px 7px; 
   border-color: white;
   opacity: 0;
-  cursor: pointer;
   text-align: center;
   transition: 0.3s ease;
 }
@@ -367,11 +370,13 @@ h2::after {
 .card-container:hover .add-to-cart {
   opacity: 1;
 }
-.add-to-cart:hover{
+
+.add-to-cart:hover {
   background-color: rgb(29, 29, 29);
   border: none;
   color: white;
 }
+
 .card img {
   width: 100%;
   height: 100%;
@@ -380,18 +385,20 @@ h2::after {
 
 .alja {
   padding: 5px;
+  margin-left: 5%;
   flex-grow: 1; 
 
 }
 
 .card h1 {
-  font-size: 1.2em;
+  font-size: 0.9em;
   font-weight: 400;
   margin: 10px 0;
 }
 
 .card .price {
   color: rgb(235, 73, 73);
+  margin-top: -3%;
 }
 
 .select {
@@ -403,10 +410,11 @@ h2::after {
   width: 100%;
   border-style: groove;
   padding: 3%;
+  background-color: white;
 }
 
 #athuzott {
-  color: gray;
+  color: rgb(218, 218, 218);
   margin-right: 5%;
 }
 
