--- a/main.css
+++ b/main.css
@@ -344,12 +344,12 @@ h2::after {
 .card-container:hover img {
   transition: 0.3s ease-in-out;
 
-  opacity: 0.5;
-  filter: brightness(0.7);
+  opacity: 0.2;
+  filter: brightness(1.2);
 }
 
 .card-container:hover {
-  background-color: rgb(235, 73, 73);
+  background-color: rgb(238, 109, 109);
 } 
 
 .card-container {
@@ -378,14 +378,12 @@ h2::after {
 .card-container:hover .add-to-cart {
   opacity: 1;
 }
-
-.card-container:hover .ikonok {
+.card-container:hover .szemikon .szivikon{
   opacity: 1;
 }
-
 .add-to-cart:hover {
   background-color: rgb(29, 29, 29);
-  border: none;
+  border-color: rgb(29, 29, 29);
   color: white;
 }
 
@@ -473,25 +471,33 @@ h2::after {
 .card:hover {
   background: var(--hover-bg);
 }
-.ikonok{
+.ikonok {
   position: absolute;
   top: 2px;
   right: 2px;
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 3px; 
 }
-.ikonok img{
-  opacity: 0;
-  width: 2.5vw;
+.szivikon,
+.szemikon {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(248, 248, 248);
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  background-color: aliceblue;
   border-radius: 50%;
+  cursor: pointer;
 }
+ 
+.szivikon img,
+.szemikon img {
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
+}
+ 
 /* asztal */
 @media only screen and (min-width: 1024px) {
   .row {
