--- a/main.css
+++ b/main.css
@@ -378,7 +378,9 @@ h2::after {
 .card-container:hover .add-to-cart {
   opacity: 1;
 }
-
+.card-container:hover .szemikon .szivikon{
+  opacity: 1;
+}
 .add-to-cart:hover {
   background-color: rgb(29, 29, 29);
   border-color: rgb(29, 29, 29);
@@ -479,18 +481,8 @@ h2::after {
   right: 2px;
   display: flex;
   flex-direction: column;
-  gap: 3px;
-  opacity: 0;
-  transition: 0.3s ease;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  z-index: 10;
+  gap: 3px; 
 }
-.card-container:hover .ikonok {
-  opacity: 1;
-  transition: none;
-  
-}
-
 .szivikon,
 .szemikon {
   width: 30px;
@@ -501,17 +493,13 @@ h2::after {
   justify-content: center;
   border-radius: 50%;
   cursor: pointer;
-  z-index: 15;
 }
  
 .szivikon img,
 .szemikon img {
   width: 50%;
   height: 50%;
-  opacity: 1 !important;
   object-fit: contain;
-  filter: none;
-  transition: none;
 }
  
 /* asztal */
