IK-21 Shop Mobil nézet elkezdése

--- a/main.css
+++ b/main.css
@@ -323,6 +323,8 @@ h2::after {
 .kartyak {
   gap: 5px;
   width: 100%;
+  min-width: 280px;
+  max-width: 280px;
   margin-top: 20px;
 }
 
@@ -542,7 +544,7 @@ h2::after {
   }
 }
 
-/* mobil nezet*/
+/* mobil nezet
 @media only screen and (max-width: 1023px) {
   .row {
     gap: 20px; 
@@ -552,7 +554,7 @@ h2::after {
     flex: 1 1 calc(50% - 20px); 
   }
 }
-
+*/
 
 @media only screen and (max-width: 600px) {
   .row {
@@ -568,325 +570,85 @@ h2::after {
   font-weight: bold;
 }
 
-
-
-/*Szűrők jobboldal
-
-
-.szuroDiv{
-    width: 100%;
-
-}
-
-h2{
-    border-bottom: 3px solid gray;
-    font-size: 2vw;
-    font-weight: lighter;
-    margin-bottom: 3%;
-}
-
-h2::after{
-    content: '';
-    border-bottom: 3px solid orangered;
-    display: block;
-    margin-bottom: -3px;
-    max-width: 16%;
-    padding-top: 0.5%
-}
-
-.csuszkaId{
-    width: 100%;
-    height: 100%;
-    background-color: rgb(88, 22, 45);
-    border-radius: 50px;
-    -webkit-appearance: none;
-}
-
-.csuszkaId::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    height: 2vw;
-    width: 2.5vw;
-    border-radius: 80px;
-    background: orangered;
-    cursor: pointer;
-    margin-top: -10px;
-  }
-
-  .arEsGombDiv{
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    height: 1.8vw;
-  }
-
-  #FilterGombDiv{
-    height: 2vw;
-    margin-top: 0.5vw;
-    margin-bottom: auto;
-    border: 0px solid;
-    border-radius: 4px;
-    font-weight: bold;
-    padding-left: 1.2vw;
-    padding-right: 1.2vw;
-    font-size: 1vw;
-  }
-
-  #PriceDiv{
-    display: flex;
-    font-size: 1vw;
-    font-weight: lighter;
-    color: rgb(184, 184, 184);
-  }
-
-  #szuzoKategoriakOl{
-    padding-left: 5%;
-    list-style-type: square;
-  }
-
-  #szuzoKategoriakOl > li{
-    color: rgb(138, 138, 138);
-    margin-bottom: 4%;
-    padding-bottom: 3%;
-    border-bottom: 1px dashed rgb(184, 184, 184);
-    font-size: 1.2vw;
-  }
-
-  .SzuroAnchor{
-    text-decoration: none;
-    color: rgb(138, 138, 138);
-  }
-
-  #TopKategoriakUl{
-    padding-left: 5%;
-    list-style-type: square;
-  }
-
-  #TopKategoriakUl > li{
-    color: black;
-    font-weight: bold;
-    margin-bottom: 4%;
-    font-size: 1.4vw;
-  }
-
-  #TopKategoriakUl > p{
-    border-bottom: 1px dashed rgb(184, 184, 184);
-    padding-bottom: 3%;
-    font-size: 1vw;
-  }
-
-  .TopAnchor{
-    text-decoration: none;
-    color: black;
-  }
-
-  .TopKep{
-    width: 6vh;
-    height: 6vh;
-    display: inline;
-    float: right;
-  }
-
-
-  :root {
-    --ColorPrimaryDk: orangered;
-      --ColorPrimaryLt: orangered;
-  }
-  
-  
-  .range-slider {
-      --range-slider-common-height: 16px;
-      --range-slider-handle-width: 24px;
-      --range-slider-handle-height: 24px;
-  
-      position: relative;
-      display: flex;
-      align-items: center;
-      width: 99%;
-      height: 100%;
-      margin-top: 1.5vw;
-      margin-bottom: 1.2vw;
-  }
-  
-  .range-slider > div {
-      position: absolute;
-      display: flex;
-      align-items: center;
-      left: 0px;
-      right: 0px;
-      height: var(--range-slider-common-height);
-  }
-  
-  .range-slider > div > .range-slider-val-left, 
-  .range-slider > div > .range-slider-val-right, 
-  .range-slider > div > .range-slider-val-range {
-      height: 0.4vw;
-  }
-  
-  .range-slider > div > .range-slider-val-left {
-    position: absolute;
-    left: 0;
-    border-radius: 10px;
-    background-color: #58122d;
-    margin: 0px;
-  }
-  
-  .range-slider > div > .range-slider-val-right {
-    position: absolute;
-    right: 0;
-    margin: 0px;
-    border-radius: 10px;
-    background-color: #58122d;
-  }
-  
-  .range-slider > div > .range-slider-val-range {
-      position: absolute;
-      left: 0;
-      top: 4px;
-      height: 8px;
-      border-radius: 14px;
-      background-color: var(--ColorPrimaryLt);
-  }
-  
-  .range-slider > div > .range-slider-handle {
-      z-index: 1;
-      position: absolute;
-      top: 0px;
-      margin-left: -11px;
-      width: 20px;
-      height: 15px;
-      border-radius: 100px;
-      background-color: orangered;
-      text-align: left;
-    
-      outline: none;
-      cursor: pointer;
-  }
-  
-  div.range-slider > input[type="range"]::-ms-thumb {
-    width: var(--range-slider-handle-width);
-      height: var(--range-slider-handle-height);
-      border: 0 none;
-      border-radius: 0px;
-      background: red;
-      
-      pointer-events: all;
-    
-  }
-  
-  div.range-slider > input[type="range"]::-moz-range-thumb {
-    width: var(--range-slider-handle-width);
-      height: var(--range-slider-handle-height);
-      border: 0 none;
-      border-radius: 0px;
-      background: red;
-      
-      pointer-events: all;
-  }
-  
-  div.range-slider > input[type="range"]::-webkit-slider-thumb {
-    width: var(--range-slider-handle-width);
-      height: var(--range-slider-handle-height);
-      border: 0 none;
-      border-radius: 0px;
-      background: red;
-      
-      pointer-events: all;
-    -webkit-appearance: none;
-  }
-  
-  div.range-slider > input[type="range"]::-ms-fill-lower {
-    background: transparent;
-    border: 0 none;
-  }
-  
-  div.range-slider > input[type="range"]::-ms-fill-upper {
-    background: transparent;
-    border: 0 none;
-  }
-  
-  .range-slider > input[type="range"] {
-      z-index: 1;
-      position: absolute;
-    width: 100%;
-    height: var(--range-slider-common-height);
-    
-      opacity: 0;
-      filter: alpha(opacity=0);
-      cursor: pointer;
-      pointer-events: none;
-    -webkit-appearance: none;
-  }
-  
-  div.range-slider > input[type="range"]::-ms-track {
-    background: transparent;
-      color: transparent;
-      
-      -webkit-appearance: none;
-  }
-  
-  div.range-slider > input[type="range"]::-moz-range-track {
-    background: transparent;
-      color: transparent;
-      
-      -moz-appearance: none;
-  }
-  
-  div.range-slider > input[type="range"]:focus::-webkit-slider-runnable-track {
-    background: transparent;
-    border: transparent;
-  }
-  
-  div.range-slider > input[type="range"]:focus {
-    outline: none;
-  }
-  
-  div.range-slider > input[type="range"]::-ms-tooltip {
-    display: none;
-  }
-  
-  .range-slider > div > .range-slider-tooltip {
-      z-index: 2;
-    position: absolute;
-    top: -42px;
-      margin-left: -12px;
-      width: 28px;
-      height: 28px;
-      border-radius: 28px;
-    background-color: var(--ColorPrimaryLt);
-    color: #fff;
-    text-align: center;
-      
-      opacity: 0;
-  }
-  
-  .range-slider > div > .range-slider-tooltip:after {
-      content: "";
-  
-      position: absolute;
-    left: 0;
-    top: 19px;
-    border-left: 14px solid transparent;
-    border-right: 14px solid transparent;
-    border-top-width: 16px;
-    border-top-style: solid;
-      border-top-color: var(--ColorPrimaryLt);
-      border-radius: 16px;
-  }
-  
-  .range-slider > div > .range-slider-tooltip > span {
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 28px;
-  }
-  
-  .range-slider:hover > div > .range-slider-tooltip {
-    opacity: 1;
-  }
-  
-*/
-
   /*Reszponzivitás*/
 
+  /*Mobil*/
+
+  .asztaliNezet{
+    display: flex;
+  }
+  .mobilNezet{
+    display: none;
+  }
+
+  .route{
+    display: flex;
+  }
+
+  .hamburger span {
+    display: block;
+    color: rgb(235, 73, 73);
+    height: 4px;
+    width: 25px;
+    margin-bottom: 5px;
+    background-color: rgb(235, 73, 73);
+    border-radius: 5px;
+}
+
+.hamburger.open span:nth-child(1) {
+  transform: rotate(45deg) translate(6px, 6.5px);
+}
+
+.hamburger.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.open span:nth-child(3) {
+  transform: rotate(-45deg) translate(6px, -7px);
+}
+
+.hamburger{
+  display: none;
+  position: fixed;
+  top: 4vh;
+  right: 4vh;
+}
+
+  #mobilMenu{
+    width: 100%;
+    display: none;
+    flex-direction: column;
+    background-color: rgb(235, 73, 73);
+
+  }
+
+  .MobilmenuLinks{
+    font-size: larger;
+    display: flex;
+    flex-direction: column;
+    font-size: larger;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-variant: small-caps;
+    color: white;
+    margin-top:  auto;
+    margin-bottom: auto;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: 150ms ease-in;
+    white-space: nowrap;
+    margin-left: 20%;
+  }
+
+  .MobilmenuLinks:hover{
+    background-color: white;
+    color: rgb(235, 73, 73);
+  }
+
+  .dropdownMobil{
+    display: none;
+  }
+  /*Nézetek*/
 
   @media only screen and (max-width: 1410px) {
     .felsoLec {
@@ -913,6 +675,28 @@ h2::after{
 
 
   }
+
+  @media only screen and (max-width: 1000px) {
+
+    .felsoLec{
+      margin: 0;
+    }
+
+    .webName{
+      align-self: flex-start;
+      margin-left: 20%;
+    }
+
+    .asztaliNezet{
+      display: none;
+    }
+
+    .hamburger{
+      display: block;
+
+    }
+  }
+
 
 /*@media only screen and (max-width: 700px) {
     .foMenu{
