--- a/main.css
+++ b/main.css
@@ -570,9 +570,23 @@ h2::after {
   font-weight: bold;
 }
 
+
+
+
+
+
   /*Reszponzivitás*/
 
   /*Mobil*/
+
+
+
+
+
+
+
+
+
 
   .asztaliNezet{
     display: flex;
@@ -615,82 +629,52 @@ h2::after {
   transition: all 1s;
 }
 
-  #mobilMenu{
-    width: 100%;
-    margin-top: 1em;
-    display: none;
-    flex-direction: column;
-    background-color: rgb(235, 73, 73);
+#mobilMenu{
+  z-index: 999;
+  margin: 0;
+  width: 100%;
+  min-width: 100%;
+  display: none;
+}
 
-  }
+.menuItem{
+  width: 100%;
+  height: 60px;
+  background-color: rgb(235, 73, 73);
+  border-bottom: #e0e0e0 1px solid;
 
-  .MobilmenuLinks, .MobilmenuLinksSplit{
-    font-size: larger;
-    display: flex;
-    flex-direction: column;
-    font-size: larger;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-variant: small-caps;
-    color: white;
-    margin-top:  auto;
-    margin-bottom: auto;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: 150ms ease-in;
-    white-space: nowrap;
-    padding-left: 5%;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    border-bottom: rgb(214, 214, 214) 1px solid;
+}
 
-  }
+#mobilMenu li{
+  list-style-type: none;
+  width: 100%;
+}
 
-  .MobilmenuLinksSplit{
-    display: flex;
-    flex-direction: row;
-    border-bottom: rgb(214, 214, 214) 1px solid;
-    padding-left: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    border: none;
+.mobilMenuLinks, .MobilDropdown{
+  width: 100%;
+  height: auto;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  padding-right: 10%;
 
+}
 
-  }
-
-  .MobilmenuLinksSplit .MobilmenuLinks{
-    width: 80%;
-  }
-
-  .MobilmenuLinks:hover{
-    background-color: white;
-    color: rgb(235, 73, 73);
-  }
-
-  .dropdownMobil{
-    display: none;
-  }
-
-  .hamburgerAloldal{
-    position: relative;
-    align-self: flex-end;
-    margin-right: 2em;
-  }
-  .hamburgerAloldal span{
-    display: block;
-    height: 4px;
-    width: 25px;
-    margin-bottom: 5px;
-    background-color: rgb(255, 201, 201);
-    border-radius: 5px;
-
-  }
-
-  .hamburgerAloldal span:nth-child(2) {
-    transform: rotate(90deg)translate(-8.5px)
-  }
+.menuLink:hover{
+  background-color: whiq;
+}
   
+
+
   /*Nézetek*/
+
+
+
+
+
+
 
   @media only screen and (max-width: 1410px) {
     .felsoLec {
@@ -721,6 +705,7 @@ h2::after {
   @media only screen and (max-width: 1000px) {
 
     .felsoLec{
+      width: 100%;
       margin: 0;
     }
 
