IK-27 MobilDropdown padding javítás

--- a/main.css
+++ b/main.css
@@ -720,15 +720,16 @@ i{
 }
 
 .menuItemDropdown1{
-
   display: none;
-  padding-left: 2em;
 }
 
 .menuItemDropdown2{
-
   display: none;
-  padding-left: 2em;
+
+}
+
+.menuItemDropdown1 .MobilDropdown, .menuItemDropdown2 .MobilDropdown{
+  padding-left: 3em;
 }
 
 .menuLink:hover{
