--- a/main.css
+++ b/main.css
@@ -129,7 +129,7 @@ footer{
   padding-top: 2em;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: rgb(11, 9, 36);
     color: white;
     font-weight: 100;
@@ -331,7 +331,7 @@ h2::after {
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .card {
@@ -801,8 +801,6 @@ i{
   .footDivKoz, .footDivBal, .footDivJobb{
       width: 40%;
       margin: 0;
-
-  
     }
 
     .main{
@@ -830,6 +828,9 @@ i{
       margin-right: 50px;
     }
 
+    .row{
+      justify-content: space-around;
+    }
   }
 
   @media only screen and (max-width: 500px) {
