IK-29 Contact us oldal telefonos nézetének elkezdése

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -59,3 +59,21 @@ button:hover{
     flex-direction: column;
     align-items: stretch;
 }
+
+@media screen and (max-width: 870px){
+    .urlap{
+        width: 100%;
+    }
+    .main{
+        width: 80%;
+    }
+    .tajekoztato{
+        font-size: 150%;
+    }
+    
+    #SendGomb{
+        width: 100%;
+        margin-top: 2%;
+        font-size: 200%;
+    }
+}
