--- a/CSS/Blog.css
+++ b/CSS/Blog.css
@@ -139,6 +139,10 @@ a{
     .BalBlogCimSpan{
         font-size: 2vw;
     }
+
+    .stickyteto{
+        height: 20vh
+    }
 }
 
 @media  screen and (max-width: 770px){
@@ -168,7 +172,7 @@ a{
 
     #BalBlogKeresesSelectID{
         width: 50%;
-        height: 100%;
+        height: 200%;
         border-color: rgba(131, 131, 131, 0.514);
         box-shadow: 9px 14px 34px -11px rgba(88, 88, 88, 0.55);
         color: gray;
@@ -189,5 +193,13 @@ a{
     .BalBlogCimSpan{
         width: 35%;
         font-size: 5vw;
+    }
+
+    .foMenu{
+        display: none;
+    }
+
+    .stickyteto{
+        height: 14vh
     }
 }
