--- a/CSS/Blog.css
+++ b/CSS/Blog.css
@@ -85,10 +85,9 @@ a{
     box-shadow: 10px 10px 19px 0px rgba(0,0,0,0.75);
 }
 .JobbKicsiGomb:hover{
-    width: 90%;
-    height: 60%;
-    font-size: 140%;
-    margin-right: 5%;
+    animation-name: HoverEffect2;
+    animation-duration: 0.25s;
+    animation-fill-mode: forwards;
 }
 
 .hidden{
@@ -117,6 +116,18 @@ a{
     display: flex;
 }
 
+.KeresesDiv{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+#keresesIkon{
+    width: 10%;
+    background-color: rgb(235, 73, 73);
+    height: 110%;
+    box-shadow: 9px 14px 34px -11px rgba(88, 88, 88, 0.55);
+}
 
 
 #BlogKeresesSelectID{
@@ -132,6 +143,17 @@ a{
 
 .BalRendezesNagyDiv{
     display: none;
+}
+
+
+@keyframes HoverEffect2{
+    from{
+        background-color: rgb(235, 73, 73);
+    }
+    to{
+        background-color: rgb(255, 255, 255);
+        color: rgb(235, 73, 73);
+    }
 }
 
 
