IK-34 css linkelés, Shop mobil nézet javítása

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -61,6 +61,15 @@ button:hover{
 }
 
 
+@media only screen and (min-height: 900px) {
+    footer{
+      position: fixed;
+      bottom: 0;
+      left: 0;
+    }
+  }
+
+
 @media screen and (max-width: 870px){
     .urlap{
         width: 100%;
