--- a/main.css
+++ b/main.css
@@ -349,16 +349,15 @@ h2::after {
 .card-container {
   position: relative;
   overflow: hidden;
+  height: 280px;
 }
 .card-container img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
 .card-container:hover img {
-  transition: 0.3s ease-in-out;
-
+  transition: 0.3s;
   opacity: 0.2;
   filter: brightness(1.2);
 }
@@ -366,10 +365,6 @@ h2::after {
 .card-container:hover {
   background-color: rgb(238, 109, 109);
 } 
-
-.card-container {
-  position: relative; 
-}
 
 .add-to-cart {
   position: absolute;
@@ -387,7 +382,7 @@ h2::after {
   border-color: white;
   opacity: 0;
   text-align: center;
-  transition: 0.3s ease;
+  transition: 0.3s;
 }
 
 .card-container:hover .add-to-cart {
@@ -557,22 +552,6 @@ h2::after {
   }
 }
 */
-
-@media only screen and (max-width: 600px) {
-  .row {
-    gap: 15px; 
-  }
-
-  .kartyak {
-    flex: 1 1 100%; 
-  }
-}
-
-.price{
-  font-weight: bold;
-}
-
-
 
 
 
@@ -748,7 +727,6 @@ i{
 
 
 
-
   @media only screen and (max-width: 1410px) {
     .felsoLec {
         flex-direction: column;
@@ -817,13 +795,18 @@ i{
       margin: 0;
       margin-right: 1%;
       margin-left: 1%;
-      width: fit-content;
     }
 
     .szuroDiv{
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .filterek, .topRatedSzuroDiv{
+      margin: 0;
+      width: 45%;
     }
 
     .filterek{
@@ -837,9 +820,33 @@ i{
     }
   }
 
+  @media only screen and (max-width: 600px) {
+    .row {
+      gap: 15px; 
+    }
+  
+    .kartyak {
+      flex: 1 1 100%; 
+    }
+  }
+  
+  .price{
+    font-weight: bold;
+  }
+  
+
   @media only screen and (max-width: 500px) {
     .szuroDiv{
       flex-direction: column;
+      width: 90%;
+      align-items: center;
+      justify-content: center;
+      margin: 0;
+    }
+
+    .filterek, .topRatedSzuroDiv{
+      margin: 0;
+      width: 90%;
     }
 
   }
